---
title: Changelog
---

include::content/docs/variables.adoc-include[]

////
* Write changelog entries in present tense
* Include GitHub issue or PR if possible using link:http://...[#123] format
* Review your changelog entries
* Don't include security sensitive information in the changelog
* Include links to documentation if possible
////

= Gentics Mesh Changelog

[[expected]]
== Planned Future Changes

* With the release of `/api/v2` of the API, v1 has been deprecated. Version 2 introduced changes in the GraphQL API only. See the note in the changelog for link:#v0.35.0[v0.35.0] for details. The `/api/v1` still works like before, we will however cease support for `/api/v1` in the future. The Java REST client still uses v1 per default but can be set to v2. We advise to do so while `/api/v1` is still supported to prevent failures in the future.

* The `html` field type will be removed in the future. Instead the `string` type will be used in combination with an additional configuration property for this field in the schema. Of course, your existing schemas will be migrated for you.

* The support for the embedded Elasticsearch will be dropped in the future. It is highly recommended to link:{{< relref "elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service].

* The Mesh Server will require Java 11 with the release of 2.0.0. The runtime support for Java 8 will be dropped. The Mesh Java REST client will still be usable with Java 8.

[[Unreleased]]

icon:plus[] Security: A dedicated logger for security related actions has been added. This logger always adds the IP address and username of the client. You can configure the logger in the `logback.xml` using the name `SecurityLogger`.

[[v1.3.1]]
== 1.3.1 (09.12.2019)

icon:check[] Tests: The `MeshDockerServer` and `MeshLocalServer` testcontainer classes will now set the initial admin password and not use a random generated password.
