@@ -10,6 +10,7 @@ import org.junit.Test;
 import com.gentics.madl.tx.Tx;
 import com.gentics.mesh.FieldUtil;
 import com.gentics.mesh.context.InternalActionContext;
+import com.gentics.mesh.core.data.node.Node;
 import com.gentics.mesh.core.link.WebRootLinkReplacer;
 import com.gentics.mesh.core.rest.common.ContainerType;
 import com.gentics.mesh.core.rest.node.NodeCreateRequest;
@@ -70,7 +71,8 @@ public class LinkRenderPathPrefixTest extends AbstractMeshTest {
 			String linkToNode = replacer.resolve(ac, initialBranchUuid(), ContainerType.DRAFT, nodeResponse.getUuid(), LinkType.SHORT, "en");
 			assertEquals("Check rendered content", "https://dummy.io/some/prefix/new-page.html", linkToNode);
 
-			linkToNode = replacer.resolve(ac, initialBranchUuid(), ContainerType.DRAFT, project().getNodeRoot().findByUuid(nodeResponse.getUuid()),
+			Node node = meshRoot().getProjectRoot().findByName(OTHER_PROJECT_NAME).findNode(nodeResponse.getUuid());
+			linkToNode = replacer.resolve(ac, initialBranchUuid(), ContainerType.DRAFT, node,
 					LinkType.SHORT, "en");
 			assertEquals("Check rendered content", "https://dummy.io/some/prefix/new-page.html", linkToNode);
 		}
